--- a/scripts/Requirements.txt
+++ b/scripts/Requirements.txt
@@ -1,4 +1,8 @@
-easyargs == 0.9.4
-Jinja2 == 2.11.3
-PyYAML == 5.4.1
-GitPython == 3.1.27
+easyargs==0.9.4
+gitdb==4.0.10
+gitpython==3.1.31
+jinja2==3.1.2
+markupsafe==2.1.2
+pyyaml==6.0
+six==1.16.0
+smmap==5.0.0
