--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,16 +11,23 @@
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
 
+  "onCreateCommand": [
+    "git",
+    "clone",
+    "${containerWorkspaceFolder}",
+    "/home/vscode/work/.dotfiles"
+  ],
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": {
-    "clone": "git clone ${containerWorkspaceFolder} $HOME/work/.dotfiles",
-    "license": "mv $HOME/work/.dotfiles/license/empty $HOME/work/.dotfiles/license/license.xml",
-    "install": "pip3 install ${containerWorkspaceFolder}"
-  }
+  "postCreateCommand": [
+    "pip3",
+    "install",
+    "--user",
+    "/home/vscode/work/.dotfiles"
+  ],
 
   // Configure tool-specific properties.
   // "customizations": {},
 
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  // "remoteUser": "root"
+  "remoteUser": "vscode"
 }
