fix version command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'build' 
+name: 'build'
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
@@ -15,4 +15,4 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           # Change this to be your CI task/script
-          runCmd: wt help
+          runCmd: wt version
