--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ISHWorkTools"
-description = "Make working easy"
+description = "Make working with ICM 7.10 easier"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
@@ -23,14 +23,14 @@ classifiers = [
   "Programming Language :: Python :: 3.11"
 ]
 dependencies = [
-  "easyargs",
-  "gitdb",
-  "gitpython",
-  "jinja2",
-  "markupsafe",
-  "pyyaml",
-  "six",
-  "smmap",
+  "easyargs==0.9.4",
+  "gitdb==4.0.10",
+  "gitpython==3.1.41",
+  "jinja2==3.1.2",
+  "markupsafe==2.1.2",
+  "pyyaml==6.0.2",
+  "six==1.16.0",
+  "smmap==5.0.0",
 ]
 dynamic = ["version"]
 
