--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Main",
             "type": "debugpy",
             "request": "launch",
-            "program": "scripts/main.py",
+            "program": "src/main.py",
             "console": "integratedTerminal",
             "args": ["-h"],
             "justMyCode": true
