refactor: changed entrypoint and install

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,10 +19,8 @@
   ],
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": [
-    "pip3",
-    "install",
-    "--user",
-    "uv"
+    "bash",
+    "install.sh"
   ],
 
   // Configure tool-specific properties.
